Working on cool gpu icon

--- a/frontend/src/Workers.css
+++ b/frontend/src/Workers.css
@@ -29,10 +29,10 @@
 }
 
 .css_gpu_1 {
-    fill:#b7e897;
-    fill-opacity:1;
-    stroke:#000000;
-    stroke-width:1.365;
-    stroke-dasharray:none;
-    stroke-opacity:1
+    fill: #b7e897;
+    fill-opacity: 1;
+    stroke: #000000;
+    stroke-width: 1.365;
+    stroke-dasharray: none;
+    stroke-opacity: 1;
 }
