--- a/frontend/src/Workers.css
+++ b/frontend/src/Workers.css
@@ -1,10 +1,21 @@
+.worker-card-main {
+    display: flex;
+    flex-direction: column;
+
+}
+.worker-card-top {
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+}
 .worker-card-box-holder {
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: start;
     margin-top: 1em;
     flex-wrap: wrap;
 }
+
 .worker-card-box {
     width: 15em;
     background-color: #dedede;
@@ -27,12 +38,13 @@
     justify-content: center;
     font-size: 2em;
 }
-
-.css_gpu_1 {
-    fill: #b7e897;
-    fill-opacity: 1;
-    stroke: #000000;
-    stroke-width: 1.365;
-    stroke-dasharray: none;
-    stroke-opacity: 1;
+.worker-card-gpu-name {
+    font-size: 1.4em;
+    font-weight: bold;
+    padding: 0.5em;
+}
+.worker-card-gpu-model {
+    padding: 0.5em;
+    font-size: 1.2em;
+    font-weight: normal;
 }
